// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress screen before the audit starts shows ballot manifest upload status 1`] = `
<div>
  <div
    class="sc-bxivhb khxFsg"
  >
    <h2
      class="bp3-heading sc-bdVaJa ibVpPq"
    >
      Audit Progress by Jurisdiction
    </h2>
    <div
      class="sc-EHOje hDNTBe"
    >
      <label
        class="bp3-control bp3-switch bp3-disabled"
      >
        <input
          checked=""
          disabled=""
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        Count unique sampled ballots
      </label>
    </div>
    <div>
      <div
        class="bp3-table-container bp3-table-selection-enabled"
        tabindex="0"
      >
        <div
          class="bp3-table-quadrant-stack"
        >
          <div
            class="bp3-table-quadrant bp3-table-quadrant-main"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 600px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 600px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Jurisdiction Name"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Jurisdiction Name
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Total Audited"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Total Audited
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Remaining in Round"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Remaining in Round
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 90px; width: 600px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="height: 90px; width: 600px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      >
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-0 bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 0px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <button
                              class="bp3-button bp3-minimal bp3-small bp3-intent-primary sc-htpNat harxhX"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                Jurisdiction One
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-1 bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 150px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            No manifest uploaded
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-2 bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 300px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 450px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-0 bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 0px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <button
                              class="bp3-button bp3-minimal bp3-small bp3-intent-primary sc-htpNat harxhX"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                Jurisdiction Two
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-1 bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 150px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Manifest received
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-2 bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 300px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 450px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-0 bp3-table-last-in-column bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 0px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <button
                              class="bp3-button bp3-minimal bp3-small bp3-intent-primary sc-htpNat harxhX"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                Jurisdiction Three
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-1 bp3-table-last-in-column bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 150px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Manifest upload failed: Invalid CSV
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-2 bp3-table-last-in-column bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 300px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-3 bp3-table-last-in-column bp3-table-last-in-row bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 450px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-table-quadrant bp3-table-quadrant-top"
            style="height: 30px; right: 0px;"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 600px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 600px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Jurisdiction Name"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Jurisdiction Name
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Total Audited"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Total Audited
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Remaining in Round"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Remaining in Round
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 90px; width: 600px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="width: 600px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-table-overlay-layer bp3-table-reordering-cursor-overlay"
        />
        <div
          class="bp3-table-resize-guides bp3-table-overlay-layer"
        />
        <div
          class="bp3-table-resize-sensor"
          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
        >
          <div
            class="bp3-table-resize-sensor-expand"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"
            />
          </div>
          <div
            class="bp3-table-resize-sensor-shrink"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress screen before the audit starts shows ballot manifest upload status 2`] = `
<div>
  <div
    class="sc-bxivhb khxFsg"
  >
    <h2
      class="bp3-heading sc-bdVaJa ibVpPq"
    >
      Audit Progress by Jurisdiction
    </h2>
    <div
      class="sc-EHOje hDNTBe"
    >
      <label
        class="bp3-control bp3-switch bp3-disabled"
      >
        <input
          checked=""
          disabled=""
          type="checkbox"
        />
        <span
          class="bp3-control-indicator"
        />
        Count unique sampled ballots
      </label>
    </div>
    <div>
      <div
        class="bp3-table-container bp3-table-selection-enabled"
        tabindex="0"
      >
        <div
          class="bp3-table-quadrant-stack"
        >
          <div
            class="bp3-table-quadrant bp3-table-quadrant-main"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 600px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 600px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Jurisdiction Name"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Jurisdiction Name
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Total Audited"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Total Audited
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Remaining in Round"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Remaining in Round
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-table-overlay-layer"
                  >
                    <div
                      class="bp3-table-overlay bp3-table-region bp3-table-selection-region"
                      style="display: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 90px; width: 600px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="height: 90px; width: 600px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      >
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-0 bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 0px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <button
                              class="bp3-button bp3-minimal bp3-small bp3-intent-primary sc-htpNat harxhX"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                Jurisdiction One
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-1 bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 150px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            No manifest uploaded
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-2 bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 300px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-0 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 450px; position: absolute; top: 0px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-0 bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 0px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <button
                              class="bp3-button bp3-minimal bp3-small bp3-intent-primary sc-htpNat harxhX"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                Jurisdiction Two
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-1 bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 150px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Manifest received
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-2 bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 300px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-1 bp3-table-cell-col-3 bp3-table-last-in-row bp3-table-cell-ledger-odd sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 450px; position: absolute; top: 30px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-0 bp3-table-last-in-column bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 0px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            <button
                              class="bp3-button bp3-minimal bp3-small bp3-intent-primary sc-htpNat harxhX"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                Jurisdiction Three
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-1 bp3-table-last-in-column bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 150px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          >
                            Manifest upload failed: Invalid CSV
                          </div>
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-2 bp3-table-last-in-column bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 300px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                        <div
                          class="bp3-table-cell bp3-table-truncated-cell bp3-table-cell-row-2 bp3-table-cell-col-3 bp3-table-last-in-column bp3-table-last-in-row bp3-table-cell-ledger-even sc-ifAKCX gSNrQK"
                          style="height: 30px; left: 450px; position: absolute; top: 60px; width: 150px;"
                        >
                          <div
                            class="bp3-table-truncated-text bp3-table-no-wrap-text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-table-overlay-layer"
                    >
                      <div
                        class="bp3-table-overlay bp3-table-region bp3-table-selection-region"
                        style="height: 30px; left: 0px; position: absolute; top: 0px; width: 150px; display: block;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-table-quadrant bp3-table-quadrant-top"
            style="height: 30px; right: 0px;"
          >
            <div
              class="bp3-table-quadrant-scroll-container"
            >
              <div
                class="bp3-table-top-container"
              >
                <div
                  class="bp3-table-column-headers bp3-table-selection-enabled"
                >
                  <div
                    style="width: 600px;"
                  >
                    <div
                      class="bp3-table-thead bp3-table-column-header-tr"
                      style="transform: translateX(0px); width: 600px;"
                    >
                      <div
                        class="bp3-table-header bp3-table-cell-col-0 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Jurisdiction Name"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Jurisdiction Name
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-1 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Status"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Status
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-cell-col-2 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Total Audited"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Total Audited
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                      <div
                        class="bp3-table-header bp3-table-last-in-row bp3-table-cell-col-3 bp3-table-column-header-cell"
                        style="flex-basis: 150px; min-width: 0px; width: 150px;"
                      >
                        <div
                          class="bp3-table-column-name"
                          title="Remaining in Round"
                        >
                          <div
                            class="bp3-table-column-name-text"
                          >
                            <div
                              class="bp3-table-truncated-text"
                            >
                              Remaining in Round
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-table-header-content"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-table-overlay-layer"
                  >
                    <div
                      class="bp3-table-overlay bp3-table-region bp3-table-selection-region"
                      style="display: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-table-bottom-container"
                style="height: 90px; width: 600px;"
              >
                <div
                  class="bp3-table-quadrant-body-container"
                >
                  <div>
                    <div
                      class="bp3-table-body-virtual-client bp3-table-cell-client"
                      style="width: 600px;"
                    >
                      <div
                        class="bp3-table-body-cells"
                      />
                    </div>
                    <div
                      class="bp3-table-overlay-layer"
                    >
                      <div
                        class="bp3-table-overlay bp3-table-region bp3-table-selection-region"
                        style="height: 30px; left: 0px; position: absolute; top: 0px; width: 150px; display: block;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-table-overlay-layer bp3-table-reordering-cursor-overlay"
        />
        <div
          class="bp3-table-resize-guides bp3-table-overlay-layer"
        />
        <div
          class="bp3-table-resize-sensor"
          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"
        >
          <div
            class="bp3-table-resize-sensor-expand"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 100000px; height: 100000px;"
            />
          </div>
          <div
            class="bp3-table-resize-sensor-shrink"
            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"
          >
            <div
              style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
